--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-CELERY_BROKER_URL=amqp://myuser:mypassword@localhost:5672/myvhost
+CELERY_BROKER_URL=amqp://myuser:mypassword@localhost:5672/j
 DATABASE_URL=postgres://user:password@0.0.0.0:5432/mydb
