--- a/.gitignore
+++ b/.gitignore
@@ -61,6 +61,7 @@ target/
 
 # pyenv
 .python-version
+journal_app_env/
 journal_app_venv/
 
 # celery beat schedule file
@@ -173,7 +174,7 @@ typings/
 .idea/**/workspace.xml
 .idea/**/tasks.xml
 .idea/dictionaries
-
+.idea/
 # Sensitive or high-churn files:
 .idea/**/dataSources/
 .idea/**/dataSources.ids
