Fixing tests to get closer to 100% coverage

--- a/setup.cfg
+++ b/setup.cfg
@@ -27,3 +27,6 @@ include = journal_app/*
 omit = *migrations*, *tests*
 plugins =
     django_coverage_plugin
+disable_warnings = already-imported
+
+
