--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-CELERY_BROKER_URL=amqp://myuser:mypassword@localhost:5672/j
+CELERY_BROKER_URL=amqp://myuser:mypassword@localhost:5672/
 DATABASE_URL=postgres://user:password@0.0.0.0:5432/mydb
 ADMIN_URL="admin/"
