--- a/.env.example
+++ b/.env.example
@@ -9,9 +9,14 @@ DJANGO_AWS_SECRET_ACCESS_KEY=
 DJANGO_AWS_STORAGE_BUCKET_NAME=
 AWS_S3_REGION_NAME=
 DEFAULT_FROM_EMAIL=
-EMAIL_SUBJECT_PREFIX=
+EMAIL_SUBJECT_PREFIX=None
 MAILGUN_API_KEY=
 MAILGUN_DOMAIN=
 MAILGUN_API_URL=
 DJANGO_SETTINGS_MODULE=
 REDISCLOUD_URL=
+TWILIO_ACCOUNT_SID=
+TWILIO_AUTH_TOKEN=
+TWILIO_NUMBER=
+STRIPE_PUBLISHABLE_KEY=
+STRIPE_SECRET_KEY=
