--- a/.env.example
+++ b/.env.example
@@ -18,9 +18,10 @@ REDISCLOUD_URL=
 TWILIO_ACCOUNT_SID=
 TWILIO_AUTH_TOKEN=
 TWILIO_NUMBER=
-STRIPE_LIVE_PUBLIC_KEY = "<your publishable key>
-STRIPE_LIVE_SECRET_KEY = "<your secret key>"
-STRIPE_TEST_PUBLIC_KEY = "<your publishable key>"
-STRIPE_TEST_SECRET_KEY = "<your secret key>"
-STRIPE_LIVE_MODE = False  # Change to True in production
-DJSTRIPE_WEBHOOK_SECRET = "whsec_xxx"  # Get it from the section in the Stripe dashboard where you added the webhook endpoint
+STRIPE_LIVE_PUBLIC_KEY=
+STRIPE_LIVE_SECRET_KEY=
+STRIPE_TEST_PUBLIC_KEY=
+STRIPE_TEST_SECRET_KEY=
+STRIPE_LIVE_MODE=False  # Change to True in production
+DJSTRIPE_WEBHOOK_SECRET="whsec_xxx"  # Get it from the section in the Stripe dashboard where you added the webhook endpoint
+TEST_STRIPE_PRICE_ID=<price id for test product>
