--- a/.env.example
+++ b/.env.example
@@ -25,3 +25,4 @@ STRIPE_TEST_SECRET_KEY=
 STRIPE_LIVE_MODE=False  # Change to True in production
 DJSTRIPE_WEBHOOK_SECRET="whsec_xxx"  # Get it from the section in the Stripe dashboard where you added the webhook endpoint
 TEST_STRIPE_PRICE_ID=<price id for test product>
+WEBHOOK_URL="www.example.com/webhook"
