added subscription details to model

--- a/.env.example
+++ b/.env.example
@@ -24,3 +24,4 @@ STRIPE_LIVE_MODE=False  # Change to True in production
 STRIPE_ENDPOINT_SECRET=whsec_xxx  # Get it from the section in the Stripe dashboard where you added the webhook endpoint
 TEST_STRIPE_PRICE_ID=<price id for test product>
 WEBHOOK_URL=www.example.com/webhook
+USERNAME_BLACKLIST
