--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 CELERY_BROKER_URL=amqp://myuser:mypassword@localhost:5672/
 DATABASE_URL=postgres://user:password@0.0.0.0:5432/mydb
+TEST_DATABASE_URL=postgres://user:password@0.0.0.0:5432/test_mydb
 DEBUG=False
 DJANGO_ADMIN_URL=admin/
 DJANGO_DEFAULT_FROM_EMAIL=No Reply<no-reply@cjstein.com>
@@ -25,3 +26,4 @@ STRIPE_ENDPOINT_SECRET=whsec_xxx  # Get it from the section in the Stripe dashbo
 TEST_STRIPE_PRICE_ID=<price id for test product>
 WEBHOOK_URL=www.example.com/webhook
 USERNAME_BLACKLIST=list,of,usernames,to,blacklist
+
