--- a/setup.cfg
+++ b/setup.cfg
@@ -30,4 +30,8 @@ plugins =
     django_coverage_plugin
 disable_warnings = already-imported
 
-
+[isort]
+default_section = THIRDPARTY
+known_first_party = journal_app  # change it for the name of your django project
+known_django = django
+sections = FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
