updated isort settings

--- a/setup.cfg
+++ b/setup.cfg
@@ -32,6 +32,6 @@ disable_warnings = already-imported
 
 [isort]
 default_section = THIRDPARTY
-known_first_party = journal_app  # change it for the name of your django project
+known_first_party = journal_app
 known_django = django
 sections = FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
